<?xml version="1.1" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="app.pavel.calculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/textviewdesign"
        android:layout_weight="3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="41sp"
            android:scrollbars = "vertical"
            android:textIsSelectable="true"
            android:id="@+id/textV1"
            android:textColor="@color/colorGray3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <RadioGroup
            android:id="@+id/RG1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/PlusMinus"
                android:background="@drawable/buttondesign"
                android:textSize="45sp"
                android:onClick="OnClickPlusMinus"
                android:id="@+id/buttonPlusMinus"
                android:textColor="@color/colorGray3"
                android:typeface="sans"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Number1"
                android:background="@drawable/buttondesign"
                android:textSize="45sp"
                android:onClick="onClickNumber"
                android:id="@+id/button1"
                android:textColor="@color/colorGray3"
                android:typeface="sans"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Number4"
                android:background="@drawable/buttondesign"
                android:textSize="45sp"
                android:onClick="onClickNumber"
                android:id="@+id/button4"
                android:textColor="@color/colorGray3"
                android:typeface="sans"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Number7"
                android:background="@drawable/buttondesign"
                android:textSize="45sp"
                android:onClick="onClickNumber"
                android:id="@+id/button7"
                android:textColor="@color/colorGray3"
                android:typeface="sans"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Comma"
                android:background="@drawable/buttondesign"
                android:textSize="45sp"
                android:onClick="onClickCommaButton"
                android:id="@+id/buttonComma"
                android:textColor="@color/colorGray3"
                android:typeface="sans"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/RG2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Percent"
                android:background="@drawable/buttondesign"
                android:textSize="45sp"
                android:onClick="onClickPercent"
                android:id="@+id/buttonPercent"
                android:textColor="@color/colorGray3"
                android:typeface="sans"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Number2"
                android:background="@drawable/buttondesign"
                android:textSize="45sp"
                android:onClick="onClickNumber"
                android:id="@+id/button2"
                android:textColor="@color/colorGray3"
                android:typeface="sans"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Number5"
                android:background="@drawable/buttondesign"
                android:textSize="45sp"
                android:onClick="onClickNumber"
                android:id="@+id/button5"
                android:textColor="@color/colorGray3"
                android:typeface="sans"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Number8"
                android:background="@drawable/buttondesign"
                android:textSize="45sp"
                android:onClick="onClickNumber"
                android:id="@+id/button8"
                android:textColor="@color/colorGray3"
                android:typeface="sans"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Number0"
                android:background="@drawable/buttondesign"
                android:textSize="45sp"
                android:onClick="onClickNumber"
                android:id="@+id/buttonZero"
                android:textColor="@color/colorGray3"
                android:typeface="sans"/>
        </RadioGroup>
        <RadioGroup
            android:id="@+id/RG3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/C"
                android:background="@drawable/buttondesign"
                android:textSize="45sp"
                android:onClick="onClickCButton"
                android:id="@+id/buttonC"
                android:textColor="@color/colorGray3"
                android:typeface="sans"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Number3"
                android:background="@drawable/buttondesign"
                android:textSize="45sp"
                android:onClick="onClickNumber"
                android:id="@+id/button3"
                android:textColor="@color/colorGray3"
                android:typeface="sans"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Number6"
                android:background="@drawable/buttondesign"
                android:textSize="45sp"
                android:onClick="onClickNumber"
                android:id="@+id/button6"
                android:textColor="@color/colorGray3"
                android:typeface="sans"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Number9"
                android:background="@drawable/buttondesign"
                android:textSize="45sp"
                android:onClick="onClickNumber"
                android:id="@+id/button9"
                android:textColor="@color/colorGray3"
                android:typeface="sans"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/EqualSign"
                android:background="@drawable/buttondesign"
                android:textSize="45sp"
                android:onClick="onClickEqualsButton"
                android:id="@+id/buttonEquals"
                android:textColor="@color/colorGray3"
                android:textStyle="bold"
                android:typeface="sans"/>
        </RadioGroup>
        <RadioGroup
            android:id="@+id/RG4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Summarize"
                android:textSize="50sp"
                android:background="@drawable/buttonoperation"
                android:onClick="onClickArithmeticOperation"
                android:id="@+id/buttonSummarize"
                android:textColor="@color/colorWhite"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Subtract"
                android:background="@drawable/buttonoperation"
                android:textSize="35sp"
                android:onClick="onClickArithmeticOperation"
                android:id="@+id/buttonSubtract"
                android:textStyle="bold"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Multiply"
                android:background="@drawable/buttonoperation"
                android:textSize="50sp"
                android:onClick="onClickArithmeticOperation"
                android:id="@+id/buttonMultiply"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Divide"
                android:background="@drawable/buttonoperation"
                android:textSize="50sp"
                android:onClick="onClickArithmeticOperation"
                android:id="@+id/buttonDivide"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/AC"
                android:background="@drawable/buttondesign"
                android:onClick="onClickArithmeticOperation"
                android:id="@+id/buttonDel"
                android:textColor="@color/colorGray3"
                android:typeface="sans"
                android:textSize="40sp"/>
        </RadioGroup>


    </LinearLayout>
</LinearLayout>
